fix single-event sidebar not showing

--- a/src/stylesheets/components/_button.scss
+++ b/src/stylesheets/components/_button.scss
@@ -86,4 +86,9 @@
   &--large {
     padding: $single $single*1.75;
   }
+
+  // Utilities
+  &--withMargin {
+    margin-top: $single;
+  }
 }
