--- a/src/stylesheets/objects/_single-event.scss
+++ b/src/stylesheets/objects/_single-event.scss
@@ -14,7 +14,7 @@
   .Sidebar {
     position: relative;
     background-color: #fbfbfb;
-    padding-top: $single*2.25;
+    padding-top: $single*3;
   }
 
   &-content {
